# python-workshops

./: .gitignore
poetry-demo/: pyproject.toml  pytest.ini
poetry-demo/poetry_demo/: translate_text.py  words.json
poetry-demo/tests/: words_loader_tests.py
