[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Piotr Morek <p.morek@smartrecruiters.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pydantic = "^2.9.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[tool.poetry.scripts]
app = "poetry_demo.translate_text:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


